# cpp-ho-library-template

./: .buildinfo  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE.md  Makefile  README.md  annotated.html  classes.html  cmake_install.cmake  dir_000000_000001.html  dir_d27435b9e6974716ef6a21b8551eb662.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  examplelib_8hpp.html  examplelib_8hpp__incl.map  examplelib_8hpp__incl.md5  examplelib_8hpp_source.html  files.html  functions.html  functions_vars.html  genindex.html  graph_legend.html  helloworld_8hpp.html  helloworld_8hpp__dep__incl.map  helloworld_8hpp__dep__incl.md5  helloworld_8hpp__incl.map  helloworld_8hpp__incl.md5  helloworld_8hpp_source.html  index.html  mainpage_8md.html  menudata.js  namespaceexamplelib.html  namespaces.html  objects.inv  search.html  (+3 more)
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-and-test.yml  cmake.yml  deploy-docs.yml
Testing/Temporary/: CTestCostData.txt
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.docs  Doxyfile.in  Makefile  cmake_install.cmake  conf.py  index.rst  mainpage.md
docs/html/: annotated.html  dir_d27435b9e6974716ef6a21b8551eb662.html  dir_d44c64559bbebec7f509842c48db8b23.html  examplelib_8hpp.html  examplelib_8hpp_source.html  helloworld_8hpp.html  helloworld_8hpp_source.html  namespaceexamplelib.html  namespaces.html  structexamplelib_1_1hello__world-members.html  structexamplelib_1_1hello__world.html
docs/html/search/: all_2.js
include/: examplelib.hpp
include/examplelib/: helloworld.hpp
search/: all_0.js  all_2.js  all_3.js  classes_0.js  files_0.js  files_1.js  namespaces_0.js  pages_0.js  searchdata.js
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  testlib  tests-helloworld.cpp
